--- a/kzeng-notes/NES-Parser.html
+++ b/kzeng-notes/NES-Parser.html
@@ -13321,7 +13321,7 @@ Create Nes-Games-List-1615875474.825359.xlsxOk!
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[85]:</div>
+<div class="prompt input_prompt">In&nbsp;[88]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">## 生成 ROMFILE</span>
@@ -13357,11 +13357,10 @@ Create Nes-Games-List-1615875474.825359.xlsxOk!
 
 <span class="n">the_first_item</span> <span class="o">=</span> <span class="kc">True</span>
 
-
 <span class="k">for</span> <span class="n">row</span> <span class="ow">in</span> <span class="n">ws1</span><span class="o">.</span><span class="n">iter_rows</span><span class="p">(</span><span class="n">min_row</span><span class="o">=</span><span class="mi">2</span><span class="p">):</span>
     <span class="k">if</span> <span class="n">the_first_item</span><span class="p">:</span>
-        <span class="c1"># print(row[4].value)</span>
         <span class="n">large_file_local_addr</span> <span class="o">=</span> <span class="n">rom_size_sum</span>
+        <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Filename: </span><span class="si">{}</span><span class="s1"> , rom_size: </span><span class="si">{}</span><span class="s1">K&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">row</span><span class="p">[</span><span class="mi">4</span><span class="p">]</span><span class="o">.</span><span class="n">value</span><span class="p">,</span> <span class="n">rom_size</span><span class="o">/</span><span class="mi">1024</span><span class="p">))</span>
         <span class="n">the_first_item</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="c1"># large_file_local_addr = &#39;---&#39;</span>
@@ -13390,7 +13389,8 @@ Create Nes-Games-List-1615875474.825359.xlsxOk!
 
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>Filename: 1944.nes , rom_size: 128.0K
+<pre>Filename: 1943.nes , rom_size: 128.0K
+Filename: 1944.nes , rom_size: 128.0K
 Filename: AIsland1.nes , rom_size: 96.0K
 Filename: AIsland2.nes , rom_size: 384.0K
 Filename: AIsland3.nes , rom_size: 384.0K
